# usipipo-landing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  QWEN.md  README.md  example.env  pyproject.toml
deploy/: README.md  usipipo-landing.service
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PAGES.md
docs/plans/: 2026-03-19-infrastructure-deployment.md
src/: __init__.py  __main__.py
src/core/config/: __init__.py
src/features/docs/: routes.py
src/features/home/: routes.py
src/features/pricing/: routes.py
src/features/status/: routes.py
src/infrastructure/web/: app.py
src/infrastructure/web/static/css/: style.css
src/infrastructure/web/templates/: base.html
src/infrastructure/web/templates/docs/: index.html
src/infrastructure/web/templates/home/: index.html
src/infrastructure/web/templates/pricing/: index.html
src/infrastructure/web/templates/status/: index.html
tests/: test_app.py
